# ChangeLog for dev-libs/glib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/glib/ChangeLog,v 1.369 2009/05/18 21:35:12 eva Exp $

*glib-2.20.2 (18 May 2009)

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +glib-2.20.2.ebuild:
  Bump to 2.20.2. Bug fixes.

*glib-2.20.1-r1 (04 May 2009)
*glib-2.18.4-r2 (04 May 2009)

  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/glib-2.18.4-gcc44.patch, +files/glib-2.20.1-gio-unref.patch,
  +glib-2.18.4-r2.ebuild, +glib-2.20.1-r1.ebuild:
  Fix gio unref, bug #260301. Fix compilation of glib-2.18 with gcc 4.4, bug
  #264686.

*glib-2.20.1 (04 May 2009)

  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +glib-2.20.1.ebuild:
  Bump to 2.20.1. Update internal copy of libprcre to 7.8, gio and
  GHashTable enhancements.

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> glib-2.18.4-r1:
  Stable for HPPA (bug #260063).

  19 Apr 2009; Mart Raudsepp <leio@gentoo.org> -glib-2.16.5.ebuild,
  -glib-2.16.6.ebuild, -glib-2.18.4.ebuild:
  Remove old redundant security vulnerable revisions

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> ChangeLog:
  Stable on sparc, bug #260063

  26 Mar 2009; Raúl Porcel <armin76@gentoo.org> glib-2.16.6-r1.ebuild,
  glib-2.18.4.ebuild, glib-2.18.4-r1.ebuild:
  arm/ia64/s390/sh/sparc stable

  18 Mar 2009; Brent Baude <ranger@gentoo.org> glib-2.18.4-r1.ebuild:
  Marking glib-2.18.4-r1 ppc for bug 249214

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> glib-2.18.4.ebuild:
  alpha/ia64 stable wrt #260063

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> glib-2.16.6.ebuild,
  glib-2.16.6-r1.ebuild, glib-2.18.4.ebuild, glib-2.18.4-r1.ebuild:
  m68k stable, thanks to kolla for testing

  15 Mar 2009; Markus Meier <maekke@gentoo.org> glib-2.18.4-r1.ebuild:
  x86 stable, bug #260063

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> glib-2.18.4-r1.ebuild: