@@ -25,13 +25,13 @@ EBUILD glib-2.18.4-r1.ebuild 2552 RMD160 064211c357cab6429e6fb2f02711f9db5ab3682
 EBUILD glib-2.18.4-r2.ebuild 2777 RMD160 fe9fe4d460e8a8f66522ed80289339551c2d7550 SHA1 8f0c23e2dfbfa345e49db045143b97c5b772f194 SHA256 7ba89f6538dbdb32dcfc02ad506ed825bd7dae580061a423f6698bae891379e2
 EBUILD glib-2.20.1-r1.ebuild 2681 RMD160 a59a0ac5646ad239e8a6949dee76d29e4be14bcc SHA1 15e3675782ff69ed580b0019a2927279f034f1cf SHA256 ac003b813c3dd2fa8fd4b633c0dda09f31eac44cb8d9615c72a95000dc10a660
 EBUILD glib-2.20.1.ebuild 2599 RMD160 a41df5162459a1688bd701bd96981310074b6d50 SHA1 c04209ff65fb07f22a7e017e1520fcf953a5c52c SHA256 740fa80baee38085f43ca5f079781487abe379c00157017c62b42a5b79cb1cf2
-EBUILD glib-2.20.2.ebuild 2678 RMD160 9dd9b3b90bbfebf697acc0b8eb317ddaa6eb8a74 SHA1 70526a03ebb5d1139c5b75db34cddd033ae85bdf SHA256 0fe91b683c01ddcda5c5cd2ef9dff6fefad186bf8ae22b53de1e8a2b3896203e
-MISC ChangeLog 45305 RMD160 9baa1e26872965d638bd3018439183ab2cac5edb SHA1 2c35545feaf229cc31ff00beef8f2d2238993cb8 SHA256 ebff927916856213180a7053cd46140ac26010f0c483cb5b51c7a73e41628f47
+EBUILD glib-2.20.2.ebuild 2599 RMD160 6f2fac5cbc0688317e6768ddbe57ac58021d0f51 SHA1 d1749c4d635e72027df54c5665562b5d60a6a4e2 SHA256 4da1fb7498a3ff6a96375e6ceac51219a24c1766786f2c79d429a555b83c4f4c
+MISC ChangeLog 45403 RMD160 8c80ff3403aa6e36413eb06e5152ee63fa789a84 SHA1 8fd3753cf66def58ff07a27f5e575d1ec6310c47 SHA256 53e143ca775772b2c20d7f236fe14318216dd697d36f811b2e84f35414eebe8f
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkoR1JUACgkQ1fmVwcYIWAY2lgCglUoGmjlIG38L7lyri3QJpGlk
-AYYAn2KRa26Rip2HEY8xW9XSQrvU6Ds1
-=Vc3A
+iEYEARECAAYFAkoR1QcACgkQ1fmVwcYIWAbAyACfczj6/Jqll0tQxsij1Nmdk9pY
+HjYAoKRKPiQW7+7MXeIMk/R85cH6XyUd
+=OIak
 -----END PGP SIGNATURE-----
