@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/glib/ChangeLog,v 1.369 2009/05/18 21:35:12 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/glib/ChangeLog,v 1.370 2009/05/18 21:37:06 eva Exp $
+
+  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org> glib-2.20.2.ebuild:
+  Remove unused patch.
 
 *glib-2.20.2 (18 May 2009)
 
